--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
     <link rel="stylesheet" href="index.css" />
-    <script type="text/javascript" src="jquery-3.3.1.slim.min.js"></script>
+      <script type="text/javascrpit" src="jquery-3.3.1.slim.min.js">
+    </script>
     <script type="text/javascript" src="popper.min.js"></script>
     <script type="text/javascript" src="bootstrap.min.js"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <title>Home Page | Mabote</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> <title>Home Page | Mabote</title>
 
 
 
