--- a/index.html
+++ b/index.html
@@ -200,49 +200,45 @@
 
     
 
-    <div id="testimonials">
-        <h1>Testimonials</h1>
-        <div class="testimonials">
-            <div class="testimonial">
-                <img alt="" src="mabote3.png" />
-                <p>
-                    I didn't understand why my garden couldn't grow crispy
-                    crops so I decided to call for help and I recieved it
-                </p>
-                <h6>Director : Mrs Thuso</h6>
+
+
+
+    <div id="contacts">
+        <h1>Contacts</h1>
+        <div class="contacts">
+
+            <div class="contact-box">
+                    <div class="mail">
+                        <h6>Want to get hold of us but you not tech savvy?<br />We got you covered</h6><hr />
+                        <h6> Our mail address is</h6>
+
+                        <em>P O Box<br /> 564 Block B Letlhabile 0264</em><hr />
+                        <h6>Our Office hours</h6>
+                        <em>Monday - Friday(08H00 - 17H00)</em><br />
+                        <em>Saturday - Sunday -Holiday(09H00 - 13H00)</em>
+
+                    </div>
             </div>
 
-            <div class="testimonial">
-                <img alt="" src="mabote4.png" />
-                <p>
-                    I could not find any clients using word of mouth to until
-                    I digitalised my business using MWServices
-                </p>
-                <h6>Creatives  :Mr Pontsho  </h6>
-            </div>
+            <div class="contact-box">
+                    <div class="call">
+                        <dl>
+                            <dt><i class="fa fa-phone"></i> Call : 0732844918 </dt>
+                            <dt><i class="fa fa-map-marker"></i> Physical Address : 564 Block B Letlhabile 0264</dt>
+                            <dt><i class="fa fa-envelope"></i> Email  : info@mwserve.co.za</dt>
+                            <dt class="socials">
+                                Get Social :<a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-whatsapp"></i></a>
 
-            <div class="testimonial">
-                <img alt="" src="mabote6.png" />
-                <p>
-                    I found myself in a state where I didn't know how to compile
-                    cv but the templates, was very helpful and I recieved it
-                </p>
-                <h6> Manager : Mr Kenzo B</h6>
-            </div>
+                            </dt>
+                        </dl>
 
-            <div class="testimonial">
-                <img alt="" src="mabote7.png" />
-                <p>
-                    I could not find any clients using word of mouth to until
-                    I digitalised my business using MWServices
-                </p>
-                <h6>Sales : Mr Simon</h6>
+                    </div>
             </div>
         </div>
     </div>
-                    
-
-
+   
 
     <div id="footer">
         <div class="footer">
